--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             <br>
             <br>
             <p class="extraBoldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48"><span
-                    class="gradientColor"><b>Geliştirici</b></span> Ekibi
+                    class="gradientColor"><b>Geliştirici</b></span> Ekip
             </p>
             <br>
             <div class="sm:px-16 lg:px-48 text-left">
@@ -405,20 +405,12 @@
                             <center><img src="/assets/img/muh5895.pp.png" draggable="false" alt="IMG" style="width: 100%">
                             </center>
                             <p class="boldText text-white opacity-90 mt-5"><b>Muh5895</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">Bot Sahibi & Geliştirici</p>
+                            <p class="smallText text-white opacity-80 mt-3">FunDevs Sahibi & Geliştirici</p>
                             <p class="smallText gradientColor mt-3"><a href="https://muh5895-52z0eqg.gamma.site/"
                                     target="_blank" class="gradientUnderline">Kişisel Sitesi <i
                                         class="fa-regular fa-arrow-right"></i></a></p>
                         </div>
                     </div>
-                    <div class="cardWBg rounded-xl h-full">
-                        <div class="p-6 items-center overflow-hidden mt-5 mb-5">
-                            <center><img src="/assets/img/danışman.png" draggable="false" alt="IMG" style="width: 100%">
-                            </center>
-                            <p class="boldText text-white opacity-90 mt-5"><b>lowxs.</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">Premium Danışmanı</p>
-                            <p class="smallText gradientColor mt-3"><a href="https://www.instagram.com/lowxs.two/" target="_blank"
-                                    class="gradientUnderline">İnstagram <i class="fa-regular fa-arrow-right"></i></a></p>
                         </div>
                     </div>
                     </div>
@@ -443,10 +435,8 @@
             <br>
             <div class="gradientBg rounded-xl">
                 <div class="p-3">
-                    <p class="extraBoldText text-black opacity-90 mt-8 mb-2 sm:px-16 lg:px-48">FunBot'u Hemen Şimdi
-                        Sunucuna Ekle!</p>
-                    <p class="regularTextIta text-black opacity-80 mb-8 sm:px-16 lg:px-48">Discord Sunucun İçin En İyi
-                        Botuna Sahip Ol!
+                    <p class="extraBoldText text-black opacity-90 mt-8 mb-2 sm:px-16 lg:px-48">FunApps'i Ziyaret Et!</p>
+                    <p class="regularTextIta text-black opacity-80 mb-8 sm:px-16 lg:px-48">Hızlı Kolay Güvenli Uygulamalarımızı Yükleleyebilirsiniz!
                     </p>
                     <div
                         class="flex flex-col justify-center items-center space-y-4 sm:flex-row sm:justify-left sm:space-y-0 sm:space-x-4">
@@ -489,7 +479,7 @@
                     </a>
                     <br>
                     <p class="smallText text-white opacity-80 mb-1">Telif Hakkı © 2024 <a href="https://muh5895-52z0eqg.gamma.site/"
-                            target="_blank" class="gradientUnderline">Muh5895</a> Tarafından FunBot İçin Tasarlandı.
+                            target="_blank" class="gradientUnderline">Muh5895</a> Tarafından FunDevs İçin Tasarlandı.
                     </p>
                     <p class="smallText text-white opacity-80 mb-3">Her Hakkı Saklıdır.</p>
                     <p class="flex items-center smallText text-white opacity-80 rounded-full md:mr-0">
@@ -503,10 +493,8 @@
                         <h2 class="regularTextIta mb-6 text-white">Bot</h2>
                         <ul class="smallText text-white opacity-80">
                             <li class="mb-4">
-                                <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank" class="gradientUnderline">Sunucuna Ekle</a>
-                            </li>
                             <li>
-                                <a href="https://politikalar-jds2tca.gamma.site/" target="_blank" class="gradientUnderline">Gizlilik Politikası</a>
+                                <a href="LİNKBURAYAGELCEK" target="_blank" class="gradientUnderline">Gizlilik Politikası</a>
                             </li>
                         </li>
                     </div>
@@ -518,7 +506,7 @@
                            <h2 class="regularTextIta mb-6 text-white">Yardım</h2>
                         <ul class="smallText text-white opacity-80">
                             <li class="mb-4">
-                                <a href="https://discord.gg/xGrEvHrMgM" target="_blank" class="gradientUnderline">Discord Sunucusu</a>
+                                <a href="https://funapps-ggtektf.gamma.site/" target="_blank" class="gradientUnderline">FunApps</a>
                             </li>
                             <li class="mb-4">
                                 <a href="https://funbot-1.gitbook.io/funbot-wiki" target="_blank" class="gradientUnderline">Wiki</a>
