--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <span class="regularTextBold text-white self-center whitespace-nowrap">FunDevs</span>
             </a>
             <div class="flex md:order-2">
-                <a href="LİNKBURAYAGELCEK??!!" target="_blank"><button type="button"
-                        class="normalTextBold text-black gradientBg rounded-full px-6 py-3 text-center mr-3 md:mr-0"><i class="fa-brands fa-discord mr-2"></i> Sunucuna Ekle</button></a>
+                <a href="https://funapps-ggtektf.gamma.site/" target="_blank"><button type="button"
+                        class="normalTextBold text-black gradientBg rounded-full px-6 py-3 text-center mr-3 md:mr-0"></i> FunApps</button></a>
                 <button data-collapse-toggle="navbar-sticky" type="button"
                     class="inline-flex items-center p-2 text-white rounded-xl md:hidden coloredBg aria-controls="
                     navbar-sticky" aria-expanded="false">
@@ -77,16 +77,16 @@
 
     <section class="section">
         <div class="py-8 px-4 mx-auto max-w-6xl text-center lg:py-16 mt-8">
-            <h1 class="blackText text-white mb-4 tracking-tight leading-none">FunBot, Discord Sunucun İçin Geliştirilmiş Türkçe
-                <span class="gradientColor">#1 Numaralı</span> Bot
+            <h1 class="blackText text-white mb-4 tracking-tight leading-none">FunDevs, Geliştirilmiş
+                <span class="gradientColor">Türkçe, Hızlı, Güvenli ve Kolay Kullanılır Uygulamalar Yapan</span> Bir Ekiptir
             </h1>
-            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">FunBot, Sunucun İçin Sana Yardımcı Olabilecek Bot.</p>
+            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">FunDevs, Sizin İçin Uygulamalar Yapıyor.</p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
                 <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                    Sunucuna Ekle
+                    FunApps
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847">
+                        xmlns="https://funapps-ggtektf.gamma.site/">
                         <path fill-rule="evenodd"
                     </svg>
                 </a>
@@ -185,12 +185,10 @@
                     <img src="Resim.png" draggable="false" alt="IMG" width="500">
                 </div>
                 <div class="sectionGridItem sectionGridItemRight">
-                    <p class="extraBoldText text-white opacity-90">Nasıl Kullanılır</p>
-                    <p class="smallText text-white opacity-80 mt-4">F!Komutlar Yaz Ve
-                        'Komutları Görüntüle'
-                        Butonuna Tıkla.</p>
-                    <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
+                    <p class="extraBoldText text-white opacity-90">Nasıl Kurulur</p>
+                    <p class="smallText text-white opacity-80 mt-4">FunApps'ten İndirdiğiniz Uygulamayı Kurmak İçin İndirilenler Klasörüne Girin Ve İndirilen Uygulamaya TGıklayıp Kurabilirsiniz.</p>
+                    <a href="https://funapps-ggtektf.gamma.site/" target="_blank">
+                        <p class="smallTextBold gradientColor gradientUnderline mt-3">FunApps <i
                                 class="fa-regular fa-arrow-right"></i></p>
                     </a>
                 </div>
@@ -199,13 +197,8 @@
             <br>
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
-                    <p class="extraBoldText text-white opacity-90">Moderasyon</p>
-                    <p class="smallText text-white opacity-80 mt-4">Moderatörlerin İşini Siz Yerinize
-                        Yapar
-                        Link Engel, Küfür Engel.</p>
-                    <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
-                                class="fa-regular fa-arrow-right"></i></p>
+                    <p class="extraBoldText text-white opacity-90">Hızlı</p>
+                    <p class="smallText text-white opacity-80 mt-4">Uygulamalarımız Hızlı Çalışır.</p>
                     </a>
                 </div>
                 <div class="sectionGridItem sectionGridItemRight">
@@ -219,13 +212,10 @@
                     <img src="/assets/img/Untitled image (3).png" draggable="false" alt="IMG" width="500">
                 </div>
                 <div class="sectionGridItem sectionGridItemRight">
-                    <p class="extraBoldText text-white opacity-90">Anket Sistemi</p>
-                    <p class="smallText text-white opacity-80 mt-4">Anket Sistemi Kurup Kullanıcıların
+                    <p class="extraBoldText text-white opacity-90">Güvenli</p>
+                    <p class="smallText text-white opacity-80 mt-4">Uygulamalarımız Güvenlidir.
                         Oy Vermesini Sağlayabilir
                         Ve Anketi Yönetebilirsiniz.</p>
-                    <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
-                                class="fa-regular fa-arrow-right"></i></p>
                     </a>
 
 
@@ -260,9 +250,9 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Sevdim</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">Görüş Belirtmedi</p>
-                            <p class="smallText text-white opacity-80 mt-8">Domatesişko 🇹🇷</p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>xx</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">xx</p>
+                            <p class="smallText text-white opacity-80 mt-8">xx 🇹🇷</p>
                         </div>
                     </div>
                     <div class="cardWBg rounded-xl h-full">
@@ -272,9 +262,9 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Muhteşem</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">ufak sıkıntıları vardı fakat düzeltildi gayet iyi ve yeterli bir bot</p>
-                            <p class="smallText text-white opacity-80 mt-8">player1453 🇹🇷</p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>xx </b></p>
+                            <p class="smallText text-white opacity-80 mt-3">xx</p>
+                            <p class="smallText text-white opacity-80 mt-8">xx 🇹🇷</p>
                         </div>
                     </div>
                     <div class="cardWBg rounded-xl h-full">
@@ -284,9 +274,9 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Altın Kadar İyi</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">Bot Komutları Çok Güzel Müq Komutları hoşuma gitti </p>
-                            <p class="smallText text-white opacity-80 mt-8">ghostkurt 🇹🇷</p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>xx</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">xx</p>
+                            <p class="smallText text-white opacity-80 mt-8">xx 🇹🇷</p>
                         </div>
                     </div>
                     <div class="cardWBg rounded-xl h-full">
@@ -296,9 +286,9 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Olağanüstü</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">Botu Beğendim Hg Bb Çok İyi</p>
-                            <p class="smallText text-white opacity-80 mt-8">biloooemin_6612 🇹🇷</p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>xx</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">xx</p>
+                            <p class="smallText text-white opacity-80 mt-8">xx 🇹🇷</p>
                         </div>
                     </div>
                     <div class="cardWBg rounded-xl h-full">
@@ -308,9 +298,9 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Hızlı</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">hızlı mesaj silmesini sevdim</p>
-                            <p class="smallText text-white opacity-80 mt-8">.nope.e 🇹🇷</p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>xx</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">xx</p>
+                            <p class="smallText text-white opacity-80 mt-8">xx 🇹🇷</p>
                         </div>
                     </div>
                     <div class="cardWBg rounded-xl h-full">
@@ -320,9 +310,9 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Çok İyi</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">Bir bdfd botuna göre yapılabilecek en iyi komutları içeriyor</p>
-                            <p class="smallText text-white opacity-80 mt-8">muhammed_2147 🇹🇷</p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>xx</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">xx</p>
+                            <p class="smallText text-white opacity-80 mt-8">xx 🇹🇷</p>
                         </div>
                     </div>
                     <div class="cardWBg rounded-xl h-full">
@@ -332,9 +322,9 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Severek Kullanıyoruz</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">Bot mükemmel sistemleri çok iyi severek kullanıyoruz</p>
-                            <p class="smallText text-white opacity-80 mt-8">exo_umut 🇹🇷</p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>xx</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">xx</p>
+                            <p class="smallText text-white opacity-80 mt-8">xx 🇹🇷</p>
                         </div>
                     </div>
                     <div class="cardWBg rounded-xl h-full">
@@ -344,9 +334,9 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Güzel</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">Bdfd'den yapılmış en güzel botlar arasında</p>
-                            <p class="smallText text-white opacity-80 mt-8">lowsx 🇹🇷</p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>xx</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">xx</p>
+                            <p class="smallText text-white opacity-80 mt-8">xx 🇹🇷</p>
                         </div>
                     </div>
                      <div class="cardWBg rounded-xl h-full">
@@ -356,18 +346,18 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Harika</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">premium komutları güzelmiş</p>
-                            <p class="smallText text-white opacity-80 mt-8">mertsigma 🇹🇷</p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>xx</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">xx</p>
+                            <p class="smallText text-white opacity-80 mt-8">xx 🇹🇷</p>
                         </div>
                     </div>
                 </div>
             </div>
             <br>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4 mt-8">
-                <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
+                <a href="LİNKBURAYAGELCEK" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                    Sunucuna Ekle
+                    Wiki
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
                         xmlns="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847">
                         <path fill-rule="evenodd"
@@ -440,11 +430,11 @@
                     </p>
                     <div
                         class="flex flex-col justify-center items-center space-y-4 sm:flex-row sm:justify-left sm:space-y-0 sm:space-x-4">
-                        <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
+                        <a href="https://funapps-ggtektf.gamma.site/" target="_blank"
                             class="normalTextBold text-white blackBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                            Sunucuna Ekle
+                            FunApss
                             <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                                xmlns="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847">
+                                xmlns="https://funapps-ggtektf.gamma.site/">
                                 <path fill-rule="evenodd"
                                     d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
                                     clip-rule="evenodd"></path>
@@ -474,8 +464,8 @@
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
                     <a href="/" class="flex items-center">
-                   <img src="Untitled image.png" draggable="false" class="h-7 mr-3" alt="IMG">
-                        <span class="regularTextBold text-white self-center whitespace-nowrap">FunBot</span>
+                   <img src="assets/img/FunFavicon.png" draggable="false" class="h-7 mr-3" alt="IMG">
+                        <span class="regularTextBold text-white self-center whitespace-nowrap">FunDevs</span>
                     </a>
                     <br>
                     <p class="smallText text-white opacity-80 mb-1">Telif Hakkı © 2024 <a href="https://muh5895-52z0eqg.gamma.site/"
@@ -490,7 +480,7 @@
                 </div>
                 <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
                     <div>
-                        <h2 class="regularTextIta mb-6 text-white">Bot</h2>
+                        <h2 class="regularTextIta mb-6 text-white">Politikalar</h2>
                         <ul class="smallText text-white opacity-80">
                             <li class="mb-4">
                             <li>
