--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <br>
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
-                    <img src="Resim.png" draggable="false" alt="IMG" width="500">
+                    <img src="assets/img/nasıl_indirilir.png" draggable="false" alt="IMG" width="500">
                 </div>
                 <div class="sectionGridItem sectionGridItemRight">
                     <p class="extraBoldText text-white opacity-90">Nasıl Kurulur</p>
@@ -202,14 +202,14 @@
                     </a>
                 </div>
                 <div class="sectionGridItem sectionGridItemRight">
-                    <img src="/assets/img/Untitled image (2).png" draggable="false" alt="IMG" width="500">
+                    <img src="assets/img/hızlı.png" draggable="false" alt="IMG" width="500">
                 </div>
             </div>
             <br>
             <br>
            <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
-                    <img src="/assets/img/Untitled image (3).png" draggable="false" alt="IMG" width="500">
+                    <img src="assets/img/güvenli.png" draggable="false" alt="IMG" width="500">
                 </div>
                 <div class="sectionGridItem sectionGridItemRight">
                     <p class="extraBoldText text-white opacity-90">Güvenli</p>
